8345757: [ASAN] clang17 report dprintf macro redefined